[gd_scene load_steps=8 format=3 uid="uid://bpn4fxm332atg"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dmrlvub2e8xhs" path="res://sprites/holdingPistol.png" id="2"]
[ext_resource type="AudioStream" path="res://sounds/player sounds/normalWalking.tres" id="8"]

[sub_resource type="CircleShape2D" id="1"]
radius = 26.0

[sub_resource type="Animation" id="3"]
resource_name = "hitAnimation"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="4"]
resource_name = "rest"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7qjed"]
_data = {
"hitAnimation": SubResource("3"),
"rest": SubResource("4")
}

[node name="player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="Sprite2D" type="Sprite2D" parent="CollisionShape2D"]
position = Vector2(11, 2)
texture = ExtResource("2")

[node name="hitEffect" type="AnimationPlayer" parent="CollisionShape2D"]
libraries = {
"": SubResource("AnimationLibrary_7qjed")
}
speed_scale = 5.0

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(2000, 0)

[node name="invincibilityTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="walkingSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8")
mix_target = 2
bus = &"player sounds"

[node name="hitbox" type="Area2D" parent="."]
position = Vector2(-4, 0)
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="hitbox"]
polygon = PackedVector2Array(-8, 0, -7, 5, -9, 13, -9, 19, -3, 22, 2, 23, 5, 27, 10, 27, 11, 26, 24, 14, 32, 12, 34, 7, 38, 7, 37, -1, 32, -7, 31, -12, 27, -17, 4, -23, 1, -21, -2, -12, -8, 0)
